# auto-aim_without_ros2

./: .gitignore  CMakeLists.txt  README.md  config.yaml  main.cpp
ballistic_calculation/inlude/: ballistic_calculation.hpp
ballistic_calculation/src/: ballistic_calculation.cpp
cameraOpen/: CMakeLists.txt  videoget.cpp
cameraOpen/include/: videoget.hpp
detector/include/: detector.hpp  number_classifier.hpp  pnp_solver.hpp
detector/src/: detector.cpp  number_classifier.cpp  pnp_solver.cpp
rm_serial_driver/include/: packet.hpp  rm_serial_driver.hpp
rm_serial_driver/src/: rm_serial_driver.cpp
testOfficial/: CMakeLists.txt  testofficial.cpp
tracker/include/: extended_kalman_filter.hpp  tracker.hpp  tracker_node.hpp
tracker/src/: extended_kalman_filter.cpp  tracker.cpp  tracker_node.cpp
